--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!--Classes: "game", "book", "food", "movie", "tv", "music"-->
         <!--Syntax: <li class="{class}"> {name} recommends... </li> -->
 
-        
+        <li class="game"> Tony recommends the game bloodborne because it was a fun challenge </li>
         <li class="tv"> Mubarik recommends the Netflix tv show Top Boy because it's interesting </li>
         <li class="game"> Jackson C recommends the game Red Dead Redemption 2 because it has a good story </li>
         <li class="book">Maggie recommends The Woman in the Library by Sulari Gentill because it has a very interesting plot twist.</li>
